{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 9,
  "lineage": "6d91904c-8240-bc79-393b-6974fc064dd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-009d9173b44d0482b",
            "arn": "arn:aws:ec2:us-east-1:686699774218:instance/i-047797ce016fa6744",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047797ce016fa6744",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0df99e5858dc57057"
              }
            ],
            "primary_network_interface_id": "eni-0df99e5858dc57057",
            "private_dns": "ip-10-20-1-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.136",
            "public_dns": "ec2-44-199-188-110.compute-1.amazonaws.com",
            "public_ip": "44.199.188.110",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ca0f1f7daa507f9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd357a34a40adee4",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "web-babajide"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "web-babajide"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f542385cd6ebdd8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-047797ce016fa6744",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.lab",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:internet-gateway/igw-04bccdd3a74caae3c",
            "id": "igw-04bccdd3a74caae3c",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-babajide"
            },
            "tags_all": {
              "Name": "igw-babajide"
            },
            "vpc_id": "vpc-011b64ae7dfc3a76d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:route-table/rtb-0f0c924de2d9a21a7",
            "id": "rtb-0f0c924de2d9a21a7",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bccdd3a74caae3c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-babajide"
            },
            "tags_all": {
              "Name": "rt-public-babajide"
            },
            "timeouts": null,
            "vpc_id": "vpc-011b64ae7dfc3a76d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtb-0f0c924de2d9a21a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057dc1a80593be275",
            "region": "us-east-1",
            "route_table_id": "rtb-0f0c924de2d9a21a7",
            "subnet_id": "subnet-0dd357a34a40adee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtbassoc-057dc1a80593be275",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lab",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group/sg-02f542385cd6ebdd8",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f542385cd6ebdd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "scg-web-babajide",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scg-web-babajide"
            },
            "tags_all": {
              "Name": "scg-web-babajide"
            },
            "timeouts": null,
            "vpc_id": "vpc-011b64ae7dfc3a76d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-02f542385cd6ebdd8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-0dd357a34a40adee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd357a34a40adee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-babajide"
            },
            "tags_all": {
              "Name": "subnet-public-babajide"
            },
            "vpc_id": "vpc-011b64ae7dfc3a76d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-0dd357a34a40adee4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:vpc/vpc-011b64ae7dfc3a76d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-000c733c815823b66",
            "default_route_table_id": "rtb-01e535894692a8a9a",
            "default_security_group_id": "sg-0eb3dde916b6d2924",
            "dhcp_options_id": "dopt-0d5b6b21a0df85bf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011b64ae7dfc3a76d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e535894692a8a9a",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "tags": {
              "Environment": "lab",
              "Lab": "03",
              "ManagedBy": "terraform",
              "Name": "vpc-babajide"
            },
            "tags_all": {
              "Environment": "lab",
              "Lab": "03",
              "ManagedBy": "terraform",
              "Name": "vpc-babajide"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "vpc-011b64ae7dfc3a76d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}